:bug: Align li circle under markdown checkbox when text wraps

--- a/styles/text.less
+++ b/styles/text.less
@@ -15,6 +15,7 @@ p {
 
 label {
   font-weight: normal;
+  vertical-align: top;
 }
 
 pre {
